Corrected the Pagination of all the modules (#37)
Co-authored-by: Saksham Singla <saksham.singla@abainfotech.com>